# PERSONAL-AI-EMPLOY

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.obsidian/: workspace.json
.specify/memory/: constitution.md
backend/: __init__.py
backend/actions/: __init__.py  facebook_poster.py  facebook_replier.py  instagram_poster.py  linkedin_poster.py  linkedin_replier.py  twitter_poster.py  whatsapp_replier.py
backend/briefing/: __init__.py  briefing_generator.py  data_collectors.py  report_formatter.py  scheduler.py
backend/mcp_servers/: __init__.py  __main__.py  approval.py  email_server.py  gmail_client.py  rate_limiter.py
backend/orchestrator/: __init__.py  __main__.py  action_executor.py  dashboard.py  orchestrator.py  watchdog.py
backend/ralph_wiggum/: __init__.py  __main__.py  prompt_injector.py  ralph_loop.py  state_manager.py  stop_hook.py
backend/scheduler/: __init__.py  content_scheduler.py  post_generator.py  schedule_manager.py
backend/utils/: __init__.py  frontmatter.py  logging_utils.py  timestamps.py  uuid_utils.py
backend/watchers/: __init__.py  base_watcher.py  facebook_watcher.py  gmail_watcher.py  instagram_watcher.py  (+4 more)
config/: .env.example  gmail_config.json  mcp.json  rate_limits.json
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  LESSONS_LEARNED.md
email_send/: 2026-02-18.json
scripts/: debug_odoo.py  e2e_odoo_test.py  e2e_test_email_mcp.py  process_invoice.py  setup_scheduler.ps1  start_all.ps1  stop_all.ps1  test_gmail_debug.py
skills/: __init__.py
tests/: __init__.py  test_action_executor.py  test_approval.py  test_ceo_briefing.py  test_content_scheduler.py  test_dashboard.py  test_email_server.py  test_frontmatter_utils.py  test_gmail_client.py  test_gmail_watcher.py  test_linkedin_poster.py  test_linkedin_watcher.py  test_meta_social.py  test_odoo.py  test_orchestrator.py  test_ralph_loop.py  test_rate_limiter.py  test_twitter.py  test_validate_frontmatter.py  test_watchdog.py  test_whatsapp_watcher.py
vault/: Business_Goals.md  Company_Handbook.md  Content_Strategy.md  Dashboard.md
(+232 files in other folders)
